src/scss/parts/frontend/custom.scss
.hero-counters{
	// background: rgba(255, 255, 255, 0.05);
    border-radius: 999px;
    border: 1px solid #7A695E;
    // backdrop-filter: blur(3px);
	padding:20px 60px;
	margin: 100px 0 !important;
	.stats-block {
		margin-bottom:0 !important;
	}
	.counter_prefix{
		
		color: #95684B;
	}
	.stats-block .stats-text{
		margin-top:10px;
	}
}

.btn-primary button{
	background-color: #95684B;
	border-color: #95684B;
	color: #fff;

	
}

.wpb_button, .wpb_content_element, ul.wpb_thumbnails-fluid>li{
	margin-bottom: 25px !important;
}
.wpb_single_image.wpb_content_element{
	margin-bottom: 0 !important;
}
.wpb_single_image img{
	vertical-align: middle;
}

.top-icon .aio-icon-header{
	text-align: left;
}

